# DEX

./: PDA_EXPLANATION.md  README.md  SYSTEM_ARCH.md  docker-compose.yml  test.md
dcex-frontend/: .env.local.example  .gitignore  Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
dcex-frontend/src/app/: globals.css  layout.tsx  page.tsx
dcex-frontend/src/app/(trading)/market/[pair]/: page.tsx
dcex-frontend/src/app/api/markets/: route.ts
dcex-frontend/src/app/api/orders/: route.ts
dcex-frontend/src/app/api/orders/[id]/: route.ts
dcex-frontend/src/components/trading/: OpenOrders.tsx  OrderForm.tsx  Orderbook.tsx  TradeHistory.tsx
dcex-frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
dcex-frontend/src/components/wallet/: WalletButton.tsx  WalletProvider.tsx
dcex-frontend/src/lib/: utils.ts
dcex-frontend/src/lib/api/: client.ts  websocket.ts
dcex-frontend/src/lib/hooks/: useMarket.ts  useOrderbook.ts  useOrders.ts
dcex-frontend/src/lib/solana/: orders.ts  program.ts  vault.ts
dcex-frontend/src/lib/stores/: trading.ts
dcex-frontend/src/types/: trading.ts
dcex-program/: Anchor.toml  Cargo.toml  SOLANA_PROGRAM_EXPLAINED.md  package.json  test_output.txt  tsconfig.json
dcex-program/idl/: dcex.json
dcex-program/programs/dcex/: Cargo.toml
dcex-program/programs/dcex/src/: constants.rs  errors.rs  lib.rs
dcex-program/programs/dcex/src/instructions/: cancel_order.rs  deposit.rs  initialize_market.rs  mod.rs  place_order.rs  settle_trade.rs  withdraw.rs
dcex-program/programs/dcex/src/state/: market.rs  mod.rs  order.rs  user_vault.rs
dcex-program/scripts/: run-on-chain-tests.sh
dcex-program/tests/: helpers.ts  orders.test.ts
matching-engine/: .env.example  Cargo.toml  Dockerfile
matching-engine/migrations/: 001_create_markets.sql  002_create_orders.sql  003_create_trades.sql  004_seed_market.sql  005_create_deposits_withdrawals.sql
matching-engine/src/: config.rs  db.rs  error.rs  main.rs  types.rs
matching-engine/src/api/: handlers.rs  mod.rs  routes.rs  ws_handler.rs
matching-engine/src/orderbook/: matching.rs  mod.rs  orderbook.rs
matching-engine/src/settlement/: mod.rs  solana.rs
matching-engine/src/websocket/: mod.rs
