[workspace]
members = [
    "programs/*"
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq.git", tag = "0.3.0" }
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git", tag = "1.5.0" }
