[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"
description = "DCEX Off-chain Matching Engine"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "derive", "macros", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2.0"
anyhow = "1.0"

dotenvy = "0.15"

futures-util = "0.3"

bs58 = "0.5"
solana-sdk = "2.1"
solana-client = "2.1"

[dev-dependencies]
tokio-test = "0.4"
