[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"
description = "DCEX Off-chain Matching Engine"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros", "migrate"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2.0"
anyhow = "1.0"

dotenvy = "0.15"

futures-util = "0.3"

bs58 = "0.5"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
anchor-client = "0.29"
spl-token = "4.0"
spl-associated-token-account = "2.2"
spl-memo = "=4.0.0"

[dev-dependencies]
tokio-test = "0.4"
